# CCured_NesCheck_LLVM10.0

./: LICENSE  README.md
CCured/NesCheck/: AnalysisState.cpp  AnalysisState.hpp  CMakeLists.txt  NesCheck.cpp  PTAWrapper.cpp
CCured/test/Coreutils_bitcode/: cat.bc  cherokee-worker.bc  chmod.bc  df.bc  env.bc  link.bc  pinky.bc  stat.bc
